[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolbox"
version = "0.1.0"
description = "My personal python toolbox."
authors = [{ name = "Vegard"}]
dependencies = [

]

[project.optional-dependencies]
scraper = [
    "cffi==2.0.0",
    "curl_cffi==0.15.0",
    "diskcache==5.6.3",
    "lxml==6.1.0"
]
